2009-12-09 Markus Malkusch <markus@malkusch.de>

    * classes/Autoloader.php (Autoloader::getNormalizeSearchPaths()):
    Class paths are normalized for searching. That means that class paths
    which are included in other class paths are removed.
    
2009-12-08 Markus Malkusch <markus@malkusch.de>

    * classes/Autoloader.php (Autoloader::searchPath()):
    Each searching for a class definition resets the max_execution_time.
    
    * classes/parser/AutoloaderFileParser.php (AutoloaderFileParser::isClassInFile()):
    The path for AutoloaderException_Parser_IO was wrong.
    
    * classes/parser/AutoloaderFileParser_Tokenizer.php (AutoloaderFileParser_Tokenizer::isClassInSource()):
    If the tokenizer fails it throws an AutoloaderException_Parser.
    
2009-11-29 Markus Malkusch <markus@malkusch.de>

    * classes/exception/AutoloaderException_SearchFailed.php (AutoloaderException_SearchFailed::getClass()):
    A method for getting the information which class couldn't be found.

2009-11-27 Markus Malkusch <markus@malkusch.de>

    * classes/index/AutoloaderIndex_SerializedHashtable.php (AutoloaderIndex_SerializedHashtable::save()):
    Raceconditions were possible during saving the index. Saving is done now atomically.